@@ -4,6 +4,10 @@
  - (djm) OpenBSD CVS Sync
    - otto@cvs.openbsd.org 2005/04/05 13:45:31
      [ssh-keygen.c]
+   - djm@cvs.openbsd.org 2005/04/06 09:43:59
+     [sshd.c]
+     avoid harmless logspam by not performing setsockopt() on non-socket;
+     ok markus@
 
 20050524
  - (djm) [contrib/caldera/openssh.spec contrib/redhat/openssh.spec]
@@ -2503,4 +2507,4 @@
    - (djm) Trim deprecated options from INSTALL. Mention UsePAM
    - (djm) Fix quote handling in sftp; Patch from admorten AT umich.edu
 
-$Id: ChangeLog,v 1.3762 2005/05/26 01:59:06 djm Exp $
+$Id: ChangeLog,v 1.3763 2005/05/26 01:59:32 djm Exp $
